--- a/Android/MQTTTest/app/src/main/res/values/strings.xml
+++ b/Android/MQTTTest/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MQTTTest</string>
+    <string name="title_activity_socket_connection">SocketConnectionActivity</string>
 </resources>
